# semantic-fabric

./: .gitignore  .mcp.json  AGENTS.md  BENCHMARKS.md  CLAUDE.md  COMPARISON.md  Cargo.toml  LICENSE-MIT  README.md  harness-plan.json  libafit_full.rlib  libafit_probe.rlib  libafit_probe2.rlib  libafit_rg.rlib  repo-profile.json  rust-toolchain.toml
.cargo/: audit.toml
.claude/: proven-config.json  settings.json
.claude-flow/: CAPABILITIES.md  config.json  config.yaml  embeddings.json  harness-active-policy.json  memory-package.json
.claude-flow/swarm/: swarm-state.json
.claude-flow/system/: metrics.json
.claude/security-scans/: scan-all-full.json
.github/workflows/: ci.yml
coding-harness/: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
coding-harness/.claude-plugin/: plugin.json
coding-harness/.harness/: manifest.json  manifest.sha256
coding-harness/__tests__/: smoke.test.ts
coding-harness/src/: init.ts
crates/sf-bench/: Cargo.toml  README.md
crates/sf-bench/benches/: constant_memory.rs  micro_hotpaths.rs  obda_latency.rs
crates/sf-bench/src/: driver.rs  lib.rs  mem.rs  workload.rs
crates/sf-bench/tests/: agg_pushdown_memory.rs  constant_memory.rs
crates/sf-cli/: Cargo.toml
crates/sf-cli/src/: main.rs
crates/sf-conformance/: Cargo.toml
crates/sf-conformance/src/: earl.rs  graph.rs  lib.rs  manifest.rs  oracle.rs  pg.rs  runner.rs  shacl_gate.rs  sqlite.rs  star_decode.rs
crates/sf-conformance/tests/: adversarial_adr0033_refute.rs  adversarial_adr0034_refute.rs  adversarial_antijoin_review.rs  adversarial_run4b_refute.rs  adversarial_testaudit.rs  differential_graphs.rs  differential_mariadb.rs  differential_mssql.rs  differential_oracle.rs  differential_paths.rs  differential_pg_sqlite.rs  differential_star.rs  differential_star_observers.rs  differential_tree.rs  differential_trino.rs  m_join_t.rs  option_b_probe.rs  w3c_pg_suite.rs  w3c_suite.rs
crates/sf-core/: Cargo.toml
crates/sf-core/src/: datatype.rs  ir.rs  lib.rs  term.rs
crates/sf-mapping/: Cargo.toml
crates/sf-mapping/src/: direct_mapping.rs  lib.rs  r2rml.rs
crates/sf-mapping/src/r2rml/: sql.rs  star.rs  tests.rs
crates/sf-mapping/src/r2rml/star/: ids.rs
crates/sf-serve/: Cargo.toml
crates/sf-serve/src/: lib.rs  ontology.rs  run.rs  stream.rs
crates/sf-serve/tests/: endpoint.rs  mysql_release.rs
crates/sf-sparql/: Cargo.toml
crates/sf-sparql/src/: build.rs  cache.rs  dump.rs  emit.rs  exec.rs  exec_core.rs  exec_mysql.rs  exec_pg.rs  iq.rs  leftjoin.rs  lib.rs  path.rs  pool.rs  saturate.rs  star.rs  unfold.rs  unify.rs
crates/sf-sparql/src/cascade/: fd.rs  joinelim.rs  mod.rs  sameterm.rs  tests.rs  ws_fk.rs  ws_g.rs  ws_st.rs
crates/sf-sparql/src/iq/: lower.rs  node.rs  normalize.rs  resolve.rs
crates/sf-sparql/src/star/: collect_vars.rs  decompose.rs  env.rs  expr.rs  tests.rs  top_level.rs  util.rs  walk.rs
crates/sf-sparql/tests/: e2e.rs  mysql_e2e.rs  ontop_intent_b0.rs  ontop_intent_b1.rs  ontop_intent_b2.rs  ontop_intent_b3.rs  ontop_intent_b4.rs  ontop_intent_b5.rs  ontop_intent_b6.rs  ontop_intent_b7.rs  ontop_port_b0.rs  ontop_port_b1.rs  ontop_port_b2.rs  ontop_port_b3.rs  ontop_port_b4.rs  ontop_port_b5.rs  ontop_port_b6.rs  ontop_port_b7.rs
crates/sf-sql/: Cargo.toml
crates/sf-sql/src/: backend.rs  cost.rs  dialect.rs  error.rs  introspect.rs  lib.rs  schema.rs  stream.rs
crates/sf-sql/src/backend/: duckdb.rs  hana.rs  monetdb.rs  mysql.rs  odbc.rs  oracle.rs  pg.rs  redshift.rs  rest.rs  sqlite.rs  sqlserver.rs
docs/: HANDOVER-2026-06-27.md  HANDOVER-2026-06-28.md  HANDOVER-2026-07-01-adr0024-m5-cutover.md  HANDOVER-2026-07-05-gepa-loop-hz-migration.md  metaharness-darwin-guide.md
docs/adr/: ADR-0001-semantic-fabric-rust-data-fabric.md  ADR-0002-implementation-scope-rdbms-both-modes.md  ADR-0003-shared-core-two-frontend-architecture.md  ADR-0004-oxigraph-rdf-sparql-substrate.md  ADR-0005-conformance-and-benchmark-harness.md  ADR-0006-crate-layout-and-performance-model.md  ADR-0007-sparql-to-sql-rewriting-strategy.md  ADR-0008-reasoning-strategy.md  ADR-0010-security-and-resource-governance.md  ADR-0011-observability-and-configuration.md  ADR-0012-test-strategy.md  ADR-0013-meta-harness-dev-loop.md  ADR-0014-production-hardening-backlog.md  ADR-0015-datatype-dialect-correctness.md  ADR-0017-provenance-lineage.md  ADR-0018-security-edge.md  ADR-0019-rdf-sparql-shacl-12-readiness.md  ADR-0020-outstanding-sota-optimisations.md  ADR-0021-ontop-parity-program.md  ADR-0022-ws-g-ontop-optimizer-test-port.md  ADR-0023-query-ir-architecture-flat-ucq-vs-iq-tree.md  ADR-0024-executor-backend-abstraction.md  ADR-0025-claude-only-gepa-harness-evolution.md  ADR-0025-ontop-parity-residue-closure.md  ADR-0026-agentic-qe-fleet-adoption.md  ADR-0026-meta-harness-darwin-implementation-recipe.md  ADR-0027-qe-fleet-load-test-plan.md  ADR-0028-full-corpus-audit-ontop-parity-ecosystem-gaps-sparql12-coverage.md  ADR-0029-rdf-star-mapping-extension-rml-star-vocabulary-basic-encoding.md  ADR-0030-metaharness-darwin-mode-dev-process-adoption.md  ADR-0031-rdf-star-query-rewrite-quoted-triple-patterns-basic-encoding.md  ADR-0032-rdf-12-soundness-completeness-native-reification.md  ADR-0033-path-as-derived-table-join-composition.md  ADR-0034-virtual-graph-set-semantics-bgp-dedup.md  ADR-0035-variable-graph-querying.md
docs/design/: ADR-0023-M3-resolution-pipeline.md  ADR-0023-M4-optionb-worklist.md  ADR-0023-design-lock.md  ADR-0024-design-lock.md  ADR-0024-parity-report.md  ADR-0024-sqlx-streaming-spike.md
docs/rdf-star/: guide.html  specification.html
docs/research/: cascade-correctness.md  dialect-correctness.md  duckdb-heterogeneous.md  external-memory-dedup.md  external-memory-join.md  federation.md  foundations-benchmarks.md  incremental-rematerialization.md  morph-kgc.md  obda-resource-governance.md  ontop.md  oxigraph.md  (+17 more)
scratch/sqlx-spike/: .gitignore  Cargo.toml  results.csv  results_pass2.csv  run.sh
scratch/sqlx-spike/src/: main.rs
scripts/: dev_pg.sh  gen_gtfs.sql  load_gtfs_postgres.sh  run_ontop_bench.sh
(+38 files in other folders)
