[package]
name = "sf-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "semantic-fabric SPARQL 1.2 Protocol HTTP endpoint over the OBDA virtualiser (ADR-0019 G8, ADR-0010/0011)"

[dependencies]
sf-core.workspace = true
sf-sql.workspace = true
sf-sparql.workspace = true
sf-mapping.workspace = true
# RDF/result serialisers reused from the Oxigraph substrate (ADR-0004/0019).
oxrdf.workspace = true
oxttl.workspace = true
oxjsonld.workspace = true
sparesults.workspace = true
# HTTP stack (ADR-0019 G8 — own the 1.2 endpoint) + bounded streaming (ADR-0010 §C).
axum.workspace = true
tower.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
form_urlencoded.workspace = true
# Source drivers (held in the server backend; ADR-0006).
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-postgres = "0.7"
thiserror.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
serde_json = "1"
form_urlencoded.workspace = true
