[package]
name = "sf-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "semantic-fabric source/SQL layer: dialect emission, introspection, streaming, semi-join cost (ADR-0006)"

[features]
## Enable the DuckDB backend (embedded DuckDB via the `duckdb` crate, `bundled` feature).
duckdb-backend = ["dep:duckdb"]
## Enable the SQL Server backend (tiberius TDS driver, async, @Pn placeholders).
## Requires `tokio-util` compat feature for TcpStream → futures_io bridge.
sqlserver-backend = ["dep:tiberius", "dep:tokio-util"]
## Enable the SAP HANA backend (hdbconnect synchronous driver).
hana-backend = ["dep:hdbconnect"]
## Enable the ODBC backend (odbc-api, covers DB2/H2/Spark/Dremio/Denodo/Teiid).
odbc-backend = ["dep:odbc-api"]
## Enable the Oracle backend (oracle crate, requires OCI client libraries).
oracle-backend = ["dep:oracle"]
## Enable REST backends (Snowflake/BigQuery/Athena/Databricks via reqwest).
rest-backends = ["dep:reqwest", "dep:serde_json"]

[dependencies]
sf-core.workspace = true
thiserror.workspace = true
# Source/SQL stack (ADR-0006 crate table / ADR-0015). Native drivers + a SQL
# AST library only — no columnar/OLAP engine on the relational path (ADR-0006
# Confirmation: no librocksdb-sys here).
sqlparser = "0.62"                                      # dialect SQL emission + rr:sqlQuery parsing (ADR-0015)
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] } # SQLite source: introspection + cursor streaming + per-statement column decl types (R2RML §10 over rr:sqlQuery views, ADR-0015)
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] } # PostgreSQL source: query_raw server-side cursor (ADR-0010 §C); chrono decode for DATE/TIME/TIMESTAMP columns
chrono = { version = "0.4", default-features = false }  # NaiveDate/NaiveTime/NaiveDateTime FromSql for pg_value (DATE/TIME/TIMESTAMP columns)
futures-util = "0.3"                                    # poll the tokio-postgres RowStream
bytes = "1"                                            # BytesMut, for the LexicalParam ToSql wrapper (ADR-0024 M3, moved from sf-sparql)
mysql_async = { version = "0.35", default-features = false, features = ["default-rustls"] } # MySQL source: async query + streaming (WS-D)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }    # SQLite serve-lane bridge (ADR-0024 §4.1): spawn_blocking + cap-1 mpsc so the !Send Connection lives only on the blocking thread; rt-multi-thread for DuckDb backend tests; macros for #[tokio::test] in backend unit tests, needed for standalone `cargo test -p sf-sql` (workspace-wide runs previously masked this via feature unification)
duckdb = { version = "1.1", features = ["bundled"], optional = true } # DuckDB source: embedded OLAP engine (ADR-0024 M8)
# SQL Server backend — TDS protocol via tiberius, with compat shim for tokio TcpStream.
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
# SAP HANA backend — synchronous pure-Rust hdbconnect driver.
hdbconnect = { version = "0.32", optional = true }
# ODBC backend — covers DB2/H2/Spark/Dremio/Denodo/Teiid via system ODBC manager.
odbc-api = { version = "28", optional = true }
# Oracle backend — requires OCI client libraries (oracle crate).
oracle = { version = "0.6", optional = true }
# REST backends — Snowflake / BigQuery / Athena / Databricks via HTTP.
reqwest = { version = "0.12", features = ["json"], optional = true }
serde_json = { version = "1", optional = true }
